Bug 406563 - "Overwrite" button has no icon
Summary: "Overwrite" button has no icon
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: Icons (other bugs)
Version First Reported In: 5.18.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: visual-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-15 12:14 UTC by Patrick Silva
Modified: 2020-07-13 15:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments
screenshot (21.48 KB, image/png)
2019-04-15 12:14 UTC, Patrick Silva
Details
Idea (487 bytes, image/png)
2020-04-01 21:04 UTC, Laura David Hurka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-04-15 12:14:41 UTC
Created attachment 119418 [details]
screenshot

STEPS TO REPRODUCE
1. open kate
2. write anything
3. press crtrl+s to save
4. double click on any text file already present on your file system

OBSERVED RESULT
"Overwrite file?" dialog shows up and, as we can see in attached screenshot, "Overwrite" button has no icon.

EXPECTED RESULT
"Overwrite" button has an icon.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2
Comment 1 Nate Graham 2019-04-15 13:15:58 UTC
I don't see that we have a suitable overwrite icon in the Breeze icon theme yet. Moving the bug there.
Comment 2 Laura David Hurka 2020-04-01 20:47:23 UTC
What do you imagine?

My idea: A black sheet on top of a red sheet. But that would rely on color.
Comment 3 Patrick Silva 2020-04-01 20:50:39 UTC
Unfortunately I have no idea. I'm not a creative person. :(
Comment 4 Laura David Hurka 2020-04-01 21:04:12 UTC
Created attachment 127179 [details]
Idea

Quick draft
Comment 5 Nate Graham 2020-04-02 17:21:57 UTC
Color in icons is fine. That looks like an interesting idea to me.
Comment 6 Bug Janitor Service 2020-07-11 22:10:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/breeze-icons/-/merge_requests/18
Comment 7 Bug Janitor Service 2020-07-13 14:00:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/13
Comment 8 Nate Graham 2020-07-13 15:53:55 UTC
Git commit a320f5d0917845470f1236d24c1e85cef11ddc45 by Nate Graham.
Committed on 13/07/2020 at 15:53.
Pushed by ngraham into branch 'master'.

Use new overwrite icon for Overwrite GUI Item
FIXED-IN: 5.73

M  +1    -1    src/kstandardguiitem.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/commit/a320f5d0917845470f1236d24c1e85cef11ddc45