Use new overwrite icon for Overwrite GUI Item

BUG: 406563
FIXED-IN: 5.73